--- a/app/assets/stylesheets/nav_bar.css
+++ b/app/assets/stylesheets/nav_bar.css
@@ -1,7 +1,7 @@
 /* PHASE 1: Header */
 .nav-bar{
   position: fixed;
-  min-width: 300px;
+  min-width: 360px;
   width: 100%;
   height: 42px;
   z-index: 1001;
