--- a/app/assets/stylesheets/search.css
+++ b/app/assets/stylesheets/search.css
@@ -15,6 +15,11 @@
 
 .bigger-font{ font-size: 4rem;}
 
+.filter-form {
+  width: auto;
+  min-width: 1em;
+}
+
 input[type='submit'].main-search-button{
   border-color: #07c;
   box-shadow: inset 0 1px 0 0 rgba(102,191,255,0.75), 0 0 0 0 rgba(0,149,255,0);
